# bsdpm

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  configure.ac
po/: POTFILES.in  es.po
src/: Makefile.am  main.c  main.h
src/core/: Makefile.am  bsdpm.pc.in  core.c  core.h
src/core/pkg_install/: lib.h  version.c
src/gtk2/: Makefile.am  gtk2_callbacks.c  gtk2_callbacks.h  gtk2_main.c  gtk2_main.h
src/gtk2/ui/: bsdpm.desktop  bsdpm_gtk.ui
