## Process this file with automake to produce Makefile.in

## Created by Anjuta

includedir = $(prefix)/include/$(PACKAGE_NAME)
uidir = $(datadir)/$(PACKAGE_NAME)/ui
desktop_entrydir = $(datadir)/applications
icons_apps_16x16dir = $(datadir)/icons/hicolor/16x16/apps
icons_apps_scalabledir = $(datadir)/icons/hicolor/scalable/apps
icons_categories_22x22dir = $(datadir)/icons/hicolor/22x22/categories
icons_mimetypes_16x16dir = $(datadir)/icons/hicolor/16x16/mimetypes
icons_mimetypes_22x22dir = $(datadir)/icons/hicolor/22x22/mimetypes

ui_DATA = ui/bsdpm_gtk.ui
desktop_entry_DATA = ui/bsdpm.desktop
icons_apps_16x16_DATA = \
	icons/16x16/apps/bsdpm-application.png
icons_apps_scalable_DATA = \
	icons/scalable/apps/bsdpm-application.svg
icons_categories_22x22_DATA = \
	icons/22x22/categories/bsdpm-category-accessibility.png \
	icons/22x22/categories/bsdpm-category-afterstep.png \
	icons/22x22/categories/bsdpm-category-arabic.png \
	icons/22x22/categories/bsdpm-category-archivers.png \
	icons/22x22/categories/bsdpm-category-astro.png \
	icons/22x22/categories/bsdpm-category-audio.png \
	icons/22x22/categories/bsdpm-category-benchmarks.png \
	icons/22x22/categories/bsdpm-category-biology.png \
	icons/22x22/categories/bsdpm-category-cad.png \
	icons/22x22/categories/bsdpm-category-chinese.png \
	icons/22x22/categories/bsdpm-category-comms.png \
	icons/22x22/categories/bsdpm-category-communications.png \
	icons/22x22/categories/bsdpm-category-converters.png \
	icons/22x22/categories/bsdpm-category-databases.png \
	icons/22x22/categories/bsdpm-category-deskutils.png \
	icons/22x22/categories/bsdpm-category-devel.png \
	icons/22x22/categories/bsdpm-category-dns.png \
	icons/22x22/categories/bsdpm-category-docs.png \
	icons/22x22/categories/bsdpm-category-editors.png \
	icons/22x22/categories/bsdpm-category-emulators.png \
	icons/22x22/categories/bsdpm-category-elisp.png \
	icons/22x22/categories/bsdpm-category-finance.png \
	icons/22x22/categories/bsdpm-category-french.png \
	icons/22x22/categories/bsdpm-category-ftp.png \
	icons/22x22/categories/bsdpm-category-games.png \
	icons/22x22/categories/bsdpm-category-german.png \
	icons/22x22/categories/bsdpm-category-gnome.png \
	icons/22x22/categories/bsdpm-category-gnustep.png \
	icons/22x22/categories/bsdpm-category-graphics.png \
	icons/22x22/categories/bsdpm-category-hamradio.png \
	icons/22x22/categories/bsdpm-category-hebrew.png \
	icons/22x22/categories/bsdpm-category-hungarian.png \
	icons/22x22/categories/bsdpm-category-irc.png \
	icons/22x22/categories/bsdpm-category-java.png \
	icons/22x22/categories/bsdpm-category-japanese.png \
	icons/22x22/categories/bsdpm-category-kde.png \
	icons/22x22/categories/bsdpm-category-korean.png \
	icons/22x22/categories/bsdpm-category-lang.png \
	icons/22x22/categories/bsdpm-category-languages.png \
	icons/22x22/categories/bsdpm-category-mail.png \
	icons/22x22/categories/bsdpm-category-math.png \
	icons/22x22/categories/bsdpm-category-misc.png \
	icons/22x22/categories/bsdpm-category-multimedia.png \
	icons/22x22/categories/bsdpm-category-net.png \
	icons/22x22/categories/bsdpm-category-net-im.png \
	icons/22x22/categories/bsdpm-category-net-mgmt.png \
	icons/22x22/categories/bsdpm-category-net-p2p.png \
	icons/22x22/categories/bsdpm-category-news.png \
	icons/22x22/categories/bsdpm-category-other.png \
	icons/22x22/categories/bsdpm-category-palm.png \
	icons/22x22/categories/bsdpm-category-polish.png \
	icons/22x22/categories/bsdpm-category-portuguese.png \
	icons/22x22/categories/bsdpm-category-ports-mgmt.png \
	icons/22x22/categories/bsdpm-category-print.png \
	icons/22x22/categories/bsdpm-category-russian.png \
	icons/22x22/categories/bsdpm-category-science.png \
	icons/22x22/categories/bsdpm-category-search.png \
	icons/22x22/categories/bsdpm-category-searches.png \
	icons/22x22/categories/bsdpm-category-security.png \
	icons/22x22/categories/bsdpm-category-shells.png \
	icons/22x22/categories/bsdpm-category-spanish.png \
	icons/22x22/categories/bsdpm-category-sysadmins.png \
	icons/22x22/categories/bsdpm-category-sysutils.png \
	icons/22x22/categories/bsdpm-category-textproc.png \
	icons/22x22/categories/bsdpm-category-ukrainian.png \
	icons/22x22/categories/bsdpm-category-unknown.png \
	icons/22x22/categories/bsdpm-category-www.png \
	icons/22x22/categories/bsdpm-category-x11.png \
	icons/22x22/categories/bsdpm-category-x11-clocks.png \
	icons/22x22/categories/bsdpm-category-x11-drivers.png \
	icons/22x22/categories/bsdpm-category-x11-fm.png \
	icons/22x22/categories/bsdpm-category-x11-fonts.png \
	icons/22x22/categories/bsdpm-category-x11-servers.png \
	icons/22x22/categories/bsdpm-category-x11-themes.png \
	icons/22x22/categories/bsdpm-category-x11-toolkits.png \
	icons/22x22/categories/bsdpm-category-x11-wm.png \
	icons/22x22/categories/bsdpm-category-vietnamese.png
icons_mimetypes_16x16_DATA = \
	icons/16x16/mimetypes/bsdpm-package-installed.png \
	icons/16x16/mimetypes/bsdpm-package-installed-upgradable.png \
	icons/16x16/mimetypes/bsdpm-package-uninstalled.png
icons_mimetypes_22x22_DATA = \
	icons/22x22/mimetypes/bsdpm-package-installed.png \
	icons/22x22/mimetypes/bsdpm-package-installed-upgradable.png \
	icons/22x22/mimetypes/bsdpm-package-uninstalled.png

AM_CPPFLAGS = \
	-Wall \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_SYSCONF_DIR=\""$(sysconfdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
	-DPACKAGE_LOCALSTATE_DIR=\""$(localstatedir)"\" \
	$(libbsdpm_gtk2_la_CFLAGS)

AM_CFLAGS = 

lib_LTLIBRARIES = libbsdpm_gtk2.la

libbsdpm_gtk2_la_SOURCES = \
	gtk2_main.c \
	gtk2_callbacks.c

libbsdpm_gtk2_la_CFLAGS = $(GTK2_CFLAGS)

libbsdpm_gtk2_la_LDFLAGS = \
	-Wl,--export-dynamic \
	$(GTK2_LDFLAGS) \
	$(GTK2_LIBS)

libbsdpm_gtk2_la_LIBADD = 

include_HEADERS = \
	gtk2_main.h \
	gtk2_callbacks.h

EXTRA_DIST = \
	$(ui_DATA) \
	$(icons_apps_16x16_DATA) \
	$(icons_apps_scalable_DATA) \
	$(icons_categories_22x22_DATA) \
	$(icons_mimetypes_16x16_DATA) \
	$(icons_mimetypes_22x22_DATA)

# Remove ui directory on uninstall
uninstall-local:
	-rm -r $(uidir)
